# shekhar-portfolio-5

./: 3.1.1  FIX_SUMMARY.md  FRONTEND_FIXES_SUMMARY.md  LOCAL_SETUP.md  QUICK_START.md  app.py  models.py  pyproject.toml  replit.md  run_app.py
instance/: eda_app.db
routes/: analysis.py  main.py  ml_models.py  statistics.py  upload.py  visualization.py
services/: data_processor.py  eda_engine.py  feature_engineer.py  insights_generator.py  ml_engine.py  report_generator.py  statistical_tests.py  visualization_engine.py
static/css/: dark_theme.css
static/js/: common.js  main.js  ml_dashboard.js  statistics.js  visualizations.js
templates/: analysis_dashboard.html  base.html  column_analysis.html  comparison.html  feature_engineering.html  index.html  ml_models.html  reports.html  statistical_tests.html  upload.html
